--- a/Unituness/Views/Login/Index.cshtml
+++ b/Unituness/Views/Login/Index.cshtml
@@ -65,6 +65,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <br>
+                    <a href="/login/newuser" class="text-transparent"> Criar Conta </a>
                 </div>
             </div>
         </div>
