--- a/Unituness/Views/Shared/_Layout.cshtml
+++ b/Unituness/Views/Shared/_Layout.cshtml
@@ -47,9 +47,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/limparbases">
+                    <a href="/vendas">
                         <span class="nav-icon"><i class="icon-envelope-alt icon-2x"></i></span>
-                        <span class="sidebar-menu-item-text">Limpar Bases</span>
+                        <span class="sidebar-menu-item-text">Relatorio Vendas</span>
                     </a>
                 </li>
 
