--- a/Unituness/Views/Shared/_Layout.cshtml
+++ b/Unituness/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
     <script src="dist/js/bootstrap.js"></script>
     <script type="text/javascript" src="assets/js/jquery-ui-1.10.4.custom.min.js"></script>
 </head>
-<body onload="initPieChart();" ng-app="app_sysadmin">
+<body onload="initPieChart();" ng-app="app_sysadmin" ng-controller="pagamentocontroller">
     <div id="wrapper">
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
