--- a/Unituness/Views/Pagamento/Recibo.cshtml
+++ b/Unituness/Views/Pagamento/Recibo.cshtml
@@ -12,9 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout | Unitunes</title>
-    <link rel="pingback" href="https://theme.co/x/demo/shop/integrity/xmlrpc.php">
-    <link rel="alternate" type="application/rss+xml" title="Integrity &raquo; Feed" href="https://theme.co/x/demo/shop/integrity/feed/" />
-    <link rel="alternate" type="application/rss+xml" title="Integrity &raquo; Comments Feed" href="https://theme.co/x/demo/shop/integrity/comments/feed/" />
+    <link rel="pingback" href="/unitunes/pagamento/recibo">
     <script type="text/javascript">
         window._wpemojiSettings = { "baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/72x72\/", "ext": ".png", "source": { "concatemoji": "https:\/\/theme.co\/x\/demo\/shop\/integrity\/wp-includes\/js\/wp-emoji-release.min.js?ver=4.2.2" } };
         !function (a, b, c) { function d(a) { var c = b.createElement("canvas"), d = c.getContext && c.getContext("2d"); return d && d.fillText ? (d.textBaseline = "top", d.font = "600 32px Arial", "flag" === a ? (d.fillText(String.fromCharCode(55356, 56812, 55356, 56807), 0, 0), c.toDataURL().length > 3e3) : (d.fillText(String.fromCharCode(55357, 56835), 0, 0), 0 !== d.getImageData(16, 16, 1, 1).data[0])) : !1 } function e(a) { var c = b.createElement("script"); c.src = a, c.type = "text/javascript", b.getElementsByTagName("head")[0].appendChild(c) } var f, g; c.supports = { simple: d("simple"), flag: d("flag") }, c.DOMReady = !1, c.readyCallback = function () { c.DOMReady = !0 }, c.supports.simple && c.supports.flag || (g = function () { c.readyCallback() }, b.addEventListener ? (b.addEventListener("DOMContentLoaded", g, !1), a.addEventListener("load", g, !1)) : (a.attachEvent("onload", g), b.attachEvent("onreadystatechange", function () { "complete" === b.readyState && c.readyCallback() })), f = c.source || {}, f.concatemoji ? e(f.concatemoji) : f.wpemoji && f.twemoji && (e(f.twemoji), e(f.wpemoji))) }(window, document, window._wpemojiSettings);
@@ -85,8 +83,8 @@
     <script type='text/javascript' src='https://theme.co/x/demo/shop/integrity/wp-content/plugins/revslider/rs-plugin/js/jquery.themepunch.revolution.min.js?ver=4.6.93'></script>
     <script type='text/javascript' src='https://theme.co/x/demo/shop/integrity/wp-content/themes/x/framework/js/dist/site/x-head.min.js?ver=4.0.1'></script>
     <script type='text/javascript' src='https://theme.co/x/demo/shop/integrity/wp-content/plugins/cornerstone/assets/js/dist/site/cs-head.min.js?ver=1.0.1'></script>
-    <link rel='canonical' href='https://theme.co/x/demo/shop/integrity/checkout/' />
-    <link rel='shortlink' href='https://theme.co/x/demo/shop/integrity/?p=9' />
+    <link rel='canonical' href='/unitunes/pagamento/recibo' />
+    <link rel='shortlink' href='/unitunes/pagamento/recibo' />
     <script type="text/javascript">
         jQuery(document).ready(function () {
             // CUSTOM AJAX CONTENT LOADING FUNCTION
@@ -150,9 +148,8 @@
     </script>
     <meta property="og:site_name" content="Integrity">
     <meta property="og:title" content="Checkout">
-    <meta property="og:description" content="X WordPress Theme | Integrity Shop Demo">
     <meta property="og:image" content="">
-    <meta property="og:url" content="https://theme.co/x/demo/shop/integrity/checkout/">
+    <meta property="og:url" content="/unitunes/pagamento/recibo">
     <meta property="og:type" content="article">
     <style id="x-customizer-css-output" type="text/css">
     a,h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover,h5 a:hover,h6 a:hover,.x-topbar .p-info a:hover,.x-breadcrumb-wrap a:hover,.widget ul li a:hover,.widget ol li a:hover,.widget.widget_text ul li a,.widget.widget_text ol li a,.widget_nav_menu .current-menu-item > a,.x-widgetbar .widget ul li a:hover,.x-accordion-heading .x-accordion-toggle:hover,.x-comment-author a:hover,.x-comment-time:hover,.x-recent-posts a:hover .h-recent-posts{color:#ff2a13;}a:hover,.widget.widget_text ul li a:hover,.widget.widget_text ol li a:hover,.x-twitter-widget ul li a:hover{color:#d80f0f;}.woocommerce .price > .amount,.woocommerce .price > ins > .amount,.woocommerce-page .price > .amount,.woocommerce-page .price > ins > .amount,.woocommerce .star-rating:before,.woocommerce-page .star-rating:before,.woocommerce .star-rating span:before,.woocommerce-page .star-rating span:before,.woocommerce li.product .entry-header h3 a:hover,.woocommerce-page li.product .entry-header h3 a:hover{color:#ff2a13;}.rev_slider_wrapper,a.x-img-thumbnail:hover,.x-slider-container.below,.page-template-template-blank-3-php .x-slider-container.above,.page-template-template-blank-6-php .x-slider-container.above{border-color:#ff2a13;}.entry-thumb:before,.pagination span.current,.flex-direction-nav a,.flex-control-nav a:hover,.flex-control-nav a.flex-active,.mejs-time-current,.x-dropcap,.x-skill-bar .bar,.x-pricing-column.featured h2,.h-comments-title small,.x-entry-share .x-share:hover,.x-highlight,.x-recent-posts .x-recent-posts-img:after{background-color:#ff2a13;}.woocommerce .onsale,.woocommerce-page .onsale,.widget_price_filter .ui-slider .ui-slider-range{background-color:#ff2a13;}.x-nav-tabs > .active > a,.x-nav-tabs > .active > a:hover{box-shadow:inset 0 3px 0 0 #ff2a13;}.x-main{width:69.536945%;}.x-sidebar{width:25.536945%;}.x-topbar .p-info,.x-topbar .p-info a,.x-navbar .desktop .x-nav > li > a,.x-navbar .desktop .sub-menu a,.x-navbar .mobile .x-nav li > a,.x-breadcrumb-wrap a,.x-breadcrumbs .delimiter{color:#272727;}.x-navbar .desktop .x-nav > li > a:hover,.x-navbar .desktop .x-nav > .x-active > a,.x-navbar .desktop .x-nav > .current-menu-item > a,.x-navbar .desktop .sub-menu a:hover,.x-navbar .desktop .sub-menu .x-active > a,.x-navbar .desktop .sub-menu .current-menu-item > a,.x-navbar .desktop .x-nav .x-megamenu > .sub-menu > li > a,.x-navbar .mobile .x-nav li > a:hover,.x-navbar .mobile .x-nav .x-active > a,.x-navbar .mobile .x-nav .current-menu-item > a{color:#b7b7b7;}.x-navbar .desktop .x-nav > li > a:hover,.x-navbar .desktop .x-nav > .x-active > a,.x-navbar .desktop .x-nav > .current-menu-item > a{box-shadow:inset 0 4px 0 0 #ff2a13;}.x-navbar .desktop .x-nav > li > a{height:90px;padding-top:37px;}.x-navbar .desktop .x-nav > li ul{top:75px;;}.x-colophon.top,.x-colophon.bottom{border-top:1px solid #e0e0e0;border-top:1px solid rgba(0,0,0,0.085);background-color:transparent;box-shadow:inset 0 1px 0 0 rgba(255,255,255,0.8);}.x-comment-author,.x-comment-time,.comment-form-author label,.comment-form-email label,.comment-form-url label,.comment-form-rating label,.comment-form-comment label,.widget_calendar #wp-calendar caption,.widget.widget_rss li .rsswidget{font-family:Lato;font-weight:300;}.p-landmark-sub,.p-meta,input,button,select,textarea{font-family:Lato;}
@@ -163,7 +160,7 @@
 
 </head>
 
-<body ng-app="app_sysadmin" ng-controller="pagamentocontroller" class="page page-id-9 page-template-default custom-background woocommerce-checkout woocommerce-page x-integrity x-integrity-light x-navbar-fixed-top-active x-full-width-layout-active x-content-sidebar-active x-v4_0_1 cornerstone-v1_0_1">
+<body ng-app="app_sysadmin" ng-controller="pagamentorecibocontroller" class="page page-id-9 page-template-default custom-background woocommerce-checkout woocommerce-page x-integrity x-integrity-light x-navbar-fixed-top-active x-full-width-layout-active x-content-sidebar-active x-v4_0_1 cornerstone-v1_0_1">
     <input id="usertoken" type="hidden" value="@ViewBag.UserToken" />
     <div id="top" class="site">
         <header class="masthead masthead-inline" role="banner">
@@ -173,7 +170,7 @@
                         <div class="x-container max width">
 
                             <h1 class="visually-hidden">Unitunes</h1>
-                            <a href="https://theme.co/x/demo/shop/integrity/" class="x-brand text" title="Unitunes Demo">
+                            <a href="/" class="x-brand text" title="Unitunes Demo">
                                 Unitunes
                             </a>
                             <a href="#" class="x-btn-navbar collapsed" data-toggle="collapse" data-target=".x-nav-wrap.mobile">
@@ -212,68 +209,60 @@
                     </div>
                     <div class="entry-wrap">
                         <header class="entry-header">
-                            <h1 class="entry-title">Inserir Créditos</h1>
+                            <h2 class="entry-title">Recibo da Trasação {{transacao.Id}}</h2>
                         </header>
                         <div class="entry-content content">
                             <div class="woocommerce">
-                                <form name="checkout" method="post" class="checkout woocommerce-checkout">
-                                    <div class="col2-set" id="customer_details">
-                                        <div class="col-1">
-                                            <div class="woocommerce-billing-fields">
-                                                <h3>Valor da Transação</h3>
-                                                <p class="form-row form-row-wide validate-required"><label class="">Valor da Transação (R$) <abbr class="required" title="required">*</abbr></label><input autofocus ng-model="transacao.ValorTransacao" maxlength="6" style="max-width:200px; text-align:center; font-size:1.2em;" type="text" money class="input-text money" placeholder="" value="5,00" /></p>
-                                            </div>
-                                            <div class="woocommerce-billing-fields">
-                                                <h3>Dados do Cartão</h3>
-                                                <p class="form-row form-row-wide validate-required"><label class="">Nome (Como no cartão) <abbr class="required" title="required">*</abbr></label><input ng-model="transacao.Cartao.NomeTitular" type="text" class="input-text " placeholder="" value="" /></p>
-                                                <p class="form-row form-row-first validate-required"><label class="">Numero do Cartão</label><input type="text" ng-model="transacao.Cartao.Numero" maxlength="16" class="input-text numbers" placeholder="" value="" /></p>
-                                                <p class="form-row form-row-second validate-required"><label class="">Codigo de Segurança</label><input ng-model="transacao.Cartao.CVC" style="max-width:100px; text-align:center;" maxlength="3" type="text" class="input-text numbers" placeholder="" value="" /></p>
-                                                <p class="form-row form-row-first validate-required">
-                                                    <label for="shipping_state" class="">Vencimento do Cartão | Mês/Ano <abbr class="required" title="required">*</abbr></label>
-                                                    <select placeholder="" style="max-width:80px;" ng-model="transacao.Cartao.ValidadeMes">
-                                                        <option>01</option>
-                                                        <option>02</option>
-                                                        <option>03</option>
-                                                        <option>04</option>
-                                                        <option>05</option>
-                                                        <option>06</option>
-                                                        <option>07</option>
-                                                        <option>08</option>
-                                                        <option>09</option>
-                                                        <option>10</option>
-                                                        <option>11</option>
-                                                        <option>12</option>
-                                                    </select>
-                                                    <select placeholder="" style="max-width:100px;" ng-model="transacao.Cartao.ValidadeAno">
-                                                        <option>2015</option>
-                                                        <option>2016</option>
-                                                        <option>2017</option>
-                                                        <option>2018</option>
-                                                        <option>2019</option>
-                                                        <option>2020</option>
-                                                        <option>2021</option>
-                                                        <option>2022</option>
-                                                        <option>2023</option>
-                                                        <option>2024</option>
-                                                        <option>2025</option>
-                                                    </select>
-                                                </p>
+                                <div name="checkout" method="post" class="checkout woocommerce-checkout">
+                                    <div id="order_review" class="woocommerce-checkout-review-order">
+                                        <table class="shop_table woocommerce-checkout-review-order-table">
+                                            <thead>
+                                                <tr>
+                                                    <th class="product-name">Produto</th>
+                                                    <th class="product-total">Total</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr class="cart_item">
+                                                    <td class="product-name">
+                                                        Crédito Unitunes
+                                                    </td>
+                                                    <td class="product-total">
+                                                        <span class="amount">R$ {{transacao.ValorTransacao.formataDinheiro(2,3)}}</span>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                            <tfoot>
+                                                <tr class="order-total">
+                                                    <th>Total</th>
+                                                    <td><strong><span class="amount">R$ {{transacao.ValorTransacao.formataDinheiro(2,3)}}</span></strong> </td>
+                                                </tr>
+                                            </tfoot>
+                                        </table>
+                                        <div id="payment" class="woocommerce-checkout-payment">
+                                            <ul class="payment_methods methods">
+                                                <li class="payment_method_bacs">
+                                                    <header class="entry-header">
+                                                        <h2 class="entry-title">
+                                                            Metodo de Pagamento<br />
+                                                            Cartão Visa XXXX XXXX XXXX {{transacao.Cartao.Numero.substring(12)}}
+                                                        </h2>
+                                                    </header>
+                                                </li>
+                                            </ul>
+                                            <div class="col-1">
+                                                <div class="form-row place-order">
+                                                    <input type="button" class="button alt" ng-click="baixar()" value="Baixar Recibo" data-value="Baixar Recibo" />
+                                                </div>
+
                                                 <div class="clear"></div>
                                             </div>
-                                        </div>
-                                        <div class="col-1">
-                                            <div class="form-row place-order">
-                                                <input type="button" class="button alt" ng-click="pagar()" value="Realizar Transação" data-value="Realizar Transação" />
-                                            </div>
-
                                             <div class="clear"></div>
                                         </div>
-
                                     </div>
-                                </form>
+                                </div>
                             </div>
                         </div>
-
                     </div>
                 </article>
             </div>
