--- a/Unituness/Views/Midia/Index.cshtml
+++ b/Unituness/Views/Midia/Index.cshtml
@@ -11,8 +11,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Midia | Unitunes</title>
-    <link rel="pingback" href="/unitunes/pagamento/recibo">
+    <title>Checkout | Unitunes</title>
+    <link rel="pingback" href="https://theme.co/x/demo/shop/integrity/xmlrpc.php">
+    <link rel="alternate" type="application/rss+xml" title="Integrity &raquo; Feed" href="https://theme.co/x/demo/shop/integrity/feed/" />
+    <link rel="alternate" type="application/rss+xml" title="Integrity &raquo; Comments Feed" href="https://theme.co/x/demo/shop/integrity/comments/feed/" />
     <script type="text/javascript">
         window._wpemojiSettings = { "baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/72x72\/", "ext": ".png", "source": { "concatemoji": "https:\/\/theme.co\/x\/demo\/shop\/integrity\/wp-includes\/js\/wp-emoji-release.min.js?ver=4.2.2" } };
         !function (a, b, c) { function d(a) { var c = b.createElement("canvas"), d = c.getContext && c.getContext("2d"); return d && d.fillText ? (d.textBaseline = "top", d.font = "600 32px Arial", "flag" === a ? (d.fillText(String.fromCharCode(55356, 56812, 55356, 56807), 0, 0), c.toDataURL().length > 3e3) : (d.fillText(String.fromCharCode(55357, 56835), 0, 0), 0 !== d.getImageData(16, 16, 1, 1).data[0])) : !1 } function e(a) { var c = b.createElement("script"); c.src = a, c.type = "text/javascript", b.getElementsByTagName("head")[0].appendChild(c) } var f, g; c.supports = { simple: d("simple"), flag: d("flag") }, c.DOMReady = !1, c.readyCallback = function () { c.DOMReady = !0 }, c.supports.simple && c.supports.flag || (g = function () { c.readyCallback() }, b.addEventListener ? (b.addEventListener("DOMContentLoaded", g, !1), a.addEventListener("load", g, !1)) : (a.attachEvent("onload", g), b.attachEvent("onreadystatechange", function () { "complete" === b.readyState && c.readyCallback() })), f = c.source || {}, f.concatemoji ? e(f.concatemoji) : f.wpemoji && f.twemoji && (e(f.twemoji), e(f.wpemoji))) }(window, document, window._wpemojiSettings);
@@ -83,8 +85,8 @@
     <script type='text/javascript' src='https://theme.co/x/demo/shop/integrity/wp-content/plugins/revslider/rs-plugin/js/jquery.themepunch.revolution.min.js?ver=4.6.93'></script>
     <script type='text/javascript' src='https://theme.co/x/demo/shop/integrity/wp-content/themes/x/framework/js/dist/site/x-head.min.js?ver=4.0.1'></script>
     <script type='text/javascript' src='https://theme.co/x/demo/shop/integrity/wp-content/plugins/cornerstone/assets/js/dist/site/cs-head.min.js?ver=1.0.1'></script>
-    <link rel='canonical' href='/unitunes/pagamento/recibo' />
-    <link rel='shortlink' href='/unitunes/pagamento/recibo' />
+    <link rel='canonical' href='https://theme.co/x/demo/shop/integrity/checkout/' />
+    <link rel='shortlink' href='https://theme.co/x/demo/shop/integrity/?p=9' />
     <script type="text/javascript">
         jQuery(document).ready(function () {
             // CUSTOM AJAX CONTENT LOADING FUNCTION
@@ -148,8 +150,9 @@
     </script>
     <meta property="og:site_name" content="Integrity">
     <meta property="og:title" content="Checkout">
+    <meta property="og:description" content="X WordPress Theme | Integrity Shop Demo">
     <meta property="og:image" content="">
-    <meta property="og:url" content="/unitunes/pagamento/recibo">
+    <meta property="og:url" content="https://theme.co/x/demo/shop/integrity/checkout/">
     <meta property="og:type" content="article">
     <style id="x-customizer-css-output" type="text/css">
     a,h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover,h5 a:hover,h6 a:hover,.x-topbar .p-info a:hover,.x-breadcrumb-wrap a:hover,.widget ul li a:hover,.widget ol li a:hover,.widget.widget_text ul li a,.widget.widget_text ol li a,.widget_nav_menu .current-menu-item > a,.x-widgetbar .widget ul li a:hover,.x-accordion-heading .x-accordion-toggle:hover,.x-comment-author a:hover,.x-comment-time:hover,.x-recent-posts a:hover .h-recent-posts{color:#ff2a13;}a:hover,.widget.widget_text ul li a:hover,.widget.widget_text ol li a:hover,.x-twitter-widget ul li a:hover{color:#d80f0f;}.woocommerce .price > .amount,.woocommerce .price > ins > .amount,.woocommerce-page .price > .amount,.woocommerce-page .price > ins > .amount,.woocommerce .star-rating:before,.woocommerce-page .star-rating:before,.woocommerce .star-rating span:before,.woocommerce-page .star-rating span:before,.woocommerce li.product .entry-header h3 a:hover,.woocommerce-page li.product .entry-header h3 a:hover{color:#ff2a13;}.rev_slider_wrapper,a.x-img-thumbnail:hover,.x-slider-container.below,.page-template-template-blank-3-php .x-slider-container.above,.page-template-template-blank-6-php .x-slider-container.above{border-color:#ff2a13;}.entry-thumb:before,.pagination span.current,.flex-direction-nav a,.flex-control-nav a:hover,.flex-control-nav a.flex-active,.mejs-time-current,.x-dropcap,.x-skill-bar .bar,.x-pricing-column.featured h2,.h-comments-title small,.x-entry-share .x-share:hover,.x-highlight,.x-recent-posts .x-recent-posts-img:after{background-color:#ff2a13;}.woocommerce .onsale,.woocommerce-page .onsale,.widget_price_filter .ui-slider .ui-slider-range{background-color:#ff2a13;}.x-nav-tabs > .active > a,.x-nav-tabs > .active > a:hover{box-shadow:inset 0 3px 0 0 #ff2a13;}.x-main{width:69.536945%;}.x-sidebar{width:25.536945%;}.x-topbar .p-info,.x-topbar .p-info a,.x-navbar .desktop .x-nav > li > a,.x-navbar .desktop .sub-menu a,.x-navbar .mobile .x-nav li > a,.x-breadcrumb-wrap a,.x-breadcrumbs .delimiter{color:#272727;}.x-navbar .desktop .x-nav > li > a:hover,.x-navbar .desktop .x-nav > .x-active > a,.x-navbar .desktop .x-nav > .current-menu-item > a,.x-navbar .desktop .sub-menu a:hover,.x-navbar .desktop .sub-menu .x-active > a,.x-navbar .desktop .sub-menu .current-menu-item > a,.x-navbar .desktop .x-nav .x-megamenu > .sub-menu > li > a,.x-navbar .mobile .x-nav li > a:hover,.x-navbar .mobile .x-nav .x-active > a,.x-navbar .mobile .x-nav .current-menu-item > a{color:#b7b7b7;}.x-navbar .desktop .x-nav > li > a:hover,.x-navbar .desktop .x-nav > .x-active > a,.x-navbar .desktop .x-nav > .current-menu-item > a{box-shadow:inset 0 4px 0 0 #ff2a13;}.x-navbar .desktop .x-nav > li > a{height:90px;padding-top:37px;}.x-navbar .desktop .x-nav > li ul{top:75px;;}.x-colophon.top,.x-colophon.bottom{border-top:1px solid #e0e0e0;border-top:1px solid rgba(0,0,0,0.085);background-color:transparent;box-shadow:inset 0 1px 0 0 rgba(255,255,255,0.8);}.x-comment-author,.x-comment-time,.comment-form-author label,.comment-form-email label,.comment-form-url label,.comment-form-rating label,.comment-form-comment label,.widget_calendar #wp-calendar caption,.widget.widget_rss li .rsswidget{font-family:Lato;font-weight:300;}.p-landmark-sub,.p-meta,input,button,select,textarea{font-family:Lato;}
@@ -160,7 +163,7 @@
 
 </head>
 
-<body ng-app="app_sysadmin" ng-controller="pagamentorecibocontroller" class="page page-id-9 page-template-default custom-background woocommerce-checkout woocommerce-page x-integrity x-integrity-light x-navbar-fixed-top-active x-full-width-layout-active x-content-sidebar-active x-v4_0_1 cornerstone-v1_0_1">
+<body ng-app="app_sysadmin" ng-controller="pagamentocontroller" class="page page-id-9 page-template-default custom-background woocommerce-checkout woocommerce-page x-integrity x-integrity-light x-navbar-fixed-top-active x-full-width-layout-active x-content-sidebar-active x-v4_0_1 cornerstone-v1_0_1">
     <input id="usertoken" type="hidden" value="@ViewBag.UserToken" />
     <div id="top" class="site">
         <header class="masthead masthead-inline" role="banner">
@@ -170,7 +173,7 @@
                         <div class="x-container max width">
 
                             <h1 class="visually-hidden">Unitunes</h1>
-                            <a href="/" class="x-brand text" title="Unitunes Demo">
+                            <a href="https://theme.co/x/demo/shop/integrity/" class="x-brand text" title="Unitunes Demo">
                                 Unitunes
                             </a>
                             <a href="#" class="x-btn-navbar collapsed" data-toggle="collapse" data-target=".x-nav-wrap.mobile">
@@ -180,8 +183,8 @@
 
                             <nav class="x-nav-wrap desktop" role="navigation">
                                 <ul id="menu-primary-menu" class="x-nav">
-                                    <li id="menu-item-108" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-108"><a href="/"><span>Loja</span></a></li>
-                                    <li id="menu-item-107" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item current_page_item menu-item-107"><a href="/pagamento"><span>Inserir Credito</span></a></li>
+                                    <li id="menu-item-108" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item menu-item-108"><a href="/"><span>Loja</span></a></li>
+                                    <li id="menu-item-107" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-107"><a href="/pagamento"><span>Inserir Credito</span></a></li>
                                     @if (Request.IsAuthenticated)
                                     {
                                         <li id="menu-item-112" class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-112">
@@ -203,68 +206,31 @@
 
         </header>
         <div class="x-container max width offset">
-            <div class="x-main center col-sm-offset-2" role="main">
-                <article id="post-9" class="post-9 page type-page status-publish hentry no-post-thumbnail">
-                    <div class="entry-featured">
-                    </div>
-                    <div class="entry-wrap">
-                        <header class="entry-header">
-                            <h2 class="entry-title">Recibo da Trasação {{transacao.Id}}</h2>
-                        </header>
-                        <div class="entry-content content">
-                            <div class="woocommerce">
-                                <div name="checkout" method="post" class="checkout woocommerce-checkout">
-                                    <div id="order_review" class="woocommerce-checkout-review-order">
-                                        <table class="shop_table woocommerce-checkout-review-order-table">
-                                            <thead>
-                                                <tr>
-                                                    <th class="product-name">Produto</th>
-                                                    <th class="product-total">Total</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr class="cart_item">
-                                                    <td class="product-name">
-                                                        Crédito Unitunes
-                                                    </td>
-                                                    <td class="product-total">
-                                                        <span class="amount">R$ {{transacao.ValorTransacao.formataDinheiro(2,3)}}</span>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                            <tfoot>
-                                                <tr class="order-total">
-                                                    <th>Total</th>
-                                                    <td><strong><span class="amount">R$ {{transacao.ValorTransacao.formataDinheiro(2,3)}}</span></strong> </td>
-                                                </tr>
-                                            </tfoot>
-                                        </table>
-                                        <div id="payment" class="woocommerce-checkout-payment">
-                                            <ul class="payment_methods methods">
-                                                <li class="payment_method_bacs">
-                                                    <header class="entry-header">
-                                                        <h2 class="entry-title">
-                                                            Metodo de Pagamento<br />
-                                                            Cartão Visa XXXX XXXX XXXX {{transacao.Cartao.Numero.substring(12)}}
-                                                        </h2>
-                                                    </header>
-                                                </li>
-                                            </ul>
-                                            <div class="col-1">
-                                                <div class="form-row place-order">
-                                                    <input type="button" class="button alt" ng-click="baixar()" value="Baixar Recibo" data-value="Baixar Recibo" />
-                                                </div>
+            <div class="x-main full" role="main">
 
-                                                <div class="clear"></div>
-                                            </div>
-                                            <div class="clear"></div>
-                                        </div>
-                                    </div>
-                                </div>
+
+                <div class="entry-wrap">
+                    <div class="entry-content">
+                        <div itemscope="" itemtype="http://schema.org/Product" id="product-90" class="post-90 product type-product status-publish has-post-thumbnail product_cat-albums product_cat-music downloadable shipping-taxable purchasable product-type-simple product-cat-albums product-cat-music instock">
+                            <div class="images">
+                                <a href="https://theme.co/x/demo/shop/integrity/wp-content/uploads/sites/2/2013/06/cd_3_flat.jpg" itemprop="image" class="woocommerce-main-image zoom x-img x-img-link x-img-thumbnail man" title="cd_3_angle" data-rel="prettyPhoto[product-gallery]"><img width="862" height="862" src="https://theme.co/x/demo/shop/integrity/wp-content/uploads/sites/2/2013/06/cd_3_angle.jpg" class="attachment-entry wp-post-image" alt="cd_3_angle" title="cd_3_angle"></a>
                             </div>
-                        </div>
+                            <div class="summary entry-summary">
+                                <h1 itemprop="name" class="product_title entry-title">Woo Album #3</h1>
+                                <div itemprop="offers" itemscope="" itemtype="http://schema.org/Offer">
+
+                                    <p class="price"><span class="amount">R$ 9.00</span></p>
+                                </div>
+                                <div itemprop="description">
+                                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                                </div>
+
+                                <button type="submit" class="single_add_to_cart_button button alt">Add to cart</button>
+                            </div><!-- .summary -->
+                        </div><!-- #product-90 -->
+
                     </div>
-                </article>
+                </div>
             </div>
         </div>
     </div> <!-- END #top.site -->
