--- a/Unituness/Views/Pagamento/Recibo.cshtml
+++ b/Unituness/Views/Pagamento/Recibo.cshtml
@@ -252,6 +252,7 @@
                                             </ul>
                                             <div class="col-1">
                                                 <div class="form-row place-order">
+                                                    <input type="button" class="button" onclick="window.location = '/'" value="Voltar a Loja" data-value="Voltar a Loja" />
                                                     <input type="button" class="button alt" ng-click="baixar()" value="Baixar Recibo" data-value="Baixar Recibo" />
                                                 </div>
 
