--- a/Unituness/Views/Shared/_Layout.cshtml
+++ b/Unituness/Views/Shared/_Layout.cshtml
@@ -6,10 +6,10 @@
 <meta name="author" content="">
 <title>SIGE Cloud | Sys Admin</title>
 <!-- Bootstrap core CSS -->
-<link href="dist/css/bootstrap.css" rel="stylesheet">
+<link href="/dist/css/bootstrap.css" rel="stylesheet">
 <head>
     <!-- Boostrap Theme -->
-    <link href="css/skin.css" rel="stylesheet">
+    <link href="/css/skin.css" rel="stylesheet">
     <link href="css/boostrap-overrides.css" rel="stylesheet">
     <link href="css/theme.css" rel="stylesheet">
 
@@ -32,7 +32,7 @@
     <!-- Theme Core -->
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/modernizr-2.6.2.min.js"></script>
-    <script src="dist/js/bootstrap.js"></script>
+    <script src="/dist/js/bootstrap.js"></script>
     <script type="text/javascript" src="assets/js/jquery-ui-1.10.4.custom.min.js"></script>
 </head>
 <body onload="initPieChart();" ng-app="app_sysadmin" ng-controller="pagamentocontroller">
