--- a/Unituness/Views/Pagamento/Index.cshtml
+++ b/Unituness/Views/Pagamento/Index.cshtml
@@ -212,6 +212,10 @@
                     </div>
                     <div class="entry-wrap">
                         <header class="entry-header">
+                            <h2 class="entry-title">Você tem R$ {{user.Credito.formataDinheiro(2,3)}} em Créditos</h2>
+                        </header>
+                        <br />
+                        <header class="entry-header">
                             <h1 class="entry-title">Inserir Créditos</h1>
                         </header>
                         <div class="entry-content content">
