--- a/Unituness/Views/Shared/_Layout.cshtml
+++ b/Unituness/Views/Shared/_Layout.cshtml
@@ -10,30 +10,30 @@
 <head>
     <!-- Boostrap Theme -->
     <link href="/css/skin.css" rel="stylesheet">
-    <link href="css/boostrap-overrides.css" rel="stylesheet">
-    <link href="css/theme.css" rel="stylesheet">
+    <link href="/css/boostrap-overrides.css" rel="stylesheet">
+    <link href="/css/theme.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="assets/css/sidebar.css" rel="stylesheet">
+    <link href="/assets/css/sidebar.css" rel="stylesheet">
 
     <!-- Plugins -->
-    <link href="assets/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/ezmark.css">
-    <link href="assets/plugins/morris.js-0.4.3/morris.css" rel="stylesheet">
-    <link href="assets/css/animate-custom.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/plugins/calendar/zabuto_calendar.css">
-    <link rel="stylesheet" type="text/css" href="assets/plugins/jquery-easy-pie-chart/jquery.easy-pie-chart.css">
-    <link href="assets/css/pushy.css" rel="stylesheet">
+    <link href="/assets/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/ezmark.css">
+    <link href="/assets/plugins/morris.js-0.4.3/morris.css" rel="stylesheet">
+    <link href="/assets/css/animate-custom.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/assets/plugins/calendar/zabuto_calendar.css">
+    <link rel="stylesheet" type="text/css" href="/assets/plugins/jquery-easy-pie-chart/jquery.easy-pie-chart.css">
+    <link href="/assets/css/pushy.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="../../assets/js/html5shiv.js"></script>
     <script src="../../assets/js/respond.min.js"></script>
     <![endif]-->
     <!-- Theme Core -->
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/modernizr-2.6.2.min.js"></script>
+    <script src="/assets/js/jquery.js"></script>
+    <script src="/assets/js/modernizr-2.6.2.min.js"></script>
     <script src="/dist/js/bootstrap.js"></script>
-    <script type="text/javascript" src="assets/js/jquery-ui-1.10.4.custom.min.js"></script>
+    <script type="text/javascript" src="/assets/js/jquery-ui-1.10.4.custom.min.js"></script>
 </head>
 <body onload="initPieChart();" ng-app="app_sysadmin" ng-controller="pagamentocontroller">
     <div id="wrapper">
@@ -68,16 +68,16 @@
     </div><!-- / wrapper for content below nav bar -->
     <!-- JavaScript -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/script.js"></script>
-    <script src="scripts/angular_1.2.9.min.js"></script>
-    <script src="scripts/angular_app.js"></script>
+    <script src="/assets/js/script.js"></script>
+    <script src="/scripts/angular_1.2.9.min.js"></script>
+    <script src="/scripts/angular_app.js"></script>
 
 
     <!-- Pushy JS -->
-    <script src="assets/js/pushy.js"></script>
+    <script src="/assets/js/pushy.js"></script>
 
     <!-- Skycons -->
-    <script src="assets/js/skycons.js"></script>
+    <script src="/assets/js/skycons.js"></script>
     <script>
         var icons = new Skycons(),
             list = [
@@ -94,7 +94,7 @@
     </script>
 
     <!-- Zabuto Calendar -->
-    <script src="assets/plugins/calendar/zabuto_calendar.js"></script>
+    <script src="/assets/plugins/calendar/zabuto_calendar.js"></script>
     <script type="application/javascript">
         $(document).ready(function () {
             $("#date-popover").popover({html: true, trigger: "manual"});
@@ -147,10 +147,10 @@
 
 
     <!-- Sparkline -->
-    <script src="assets/js/jquery.sparkline.js"></script>
+    <script src="/assets/js/jquery.sparkline.js"></script>
 
     <!-- EzMark -->
-    <script src="assets/js/jquery.ezmark.js"></script>
+    <script src="/assets/js/jquery.ezmark.js"></script>
     <script type="text/javascript">
         $(function () {
             $('.custom-check input').ezMark()
@@ -158,24 +158,24 @@
     </script>
 
     <!-- Morris Chart -->
-    <script src="assets/plugins/morris.js-0.4.3/morris.js"></script>
-    <script src="assets/js/rap2AC.js"></script>
+    <script src="/assets/plugins/morris.js-0.4.3/morris.js"></script>
+    <script src="/assets/js/rap2AC.js"></script>
 
     <!-- Custom -->
-    <script src="assets/js/sidebar-navbar.js"></script>
-    <script src="assets/js/chart-data.js"></script>
+    <script src="/assets/js/sidebar-navbar.js"></script>
+    <script src="/assets/js/chart-data.js"></script>
 
     <!-- Google Maps -->
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-    <script type="text/javascript" src="assets/js/gmap3.js"></script>
-    <script src="assets/js/gmap.custom-index-map.js"></script>
+    <script type="text/javascript" src="/assets/js/gmap3.js"></script>
+    <script src="/assets/js/gmap.custom-index-map.js"></script>
 
     <!-- Font Awesome Markers -->
-    <script src="assets/plugins/fontawesome-markers-master/fontawesome-markers.js"></script>
+    <script src="/assets/plugins/fontawesome-markers-master/fontawesome-markers.js"></script>
 
     <!-- Easy Pie Charts -->
-    <script type="text/javascript" src="assets/plugins/jquery-easy-pie-chart/examples/excanvas.js"></script>
-    <script type="text/javascript" src="assets/plugins/jquery-easy-pie-chart/jquery.easy-pie-chart.js"></script>
+    <script type="text/javascript" src="/assets/plugins/jquery-easy-pie-chart/examples/excanvas.js"></script>
+    <script type="text/javascript" src="/assets/plugins/jquery-easy-pie-chart/jquery.easy-pie-chart.js"></script>
 
     <!-- Preloader -->
     <script>
@@ -185,8 +185,8 @@
     </script>
 
     <!-- Flot -->
-    <script type="text/javascript" src="assets/plugins/flot/jquery.flot.js"></script>
-    <script type="text/javascript" src="assets/plugins/flot/jquery.flot.resize.js"></script>
+    <script type="text/javascript" src="/assets/plugins/flot/jquery.flot.js"></script>
+    <script type="text/javascript" src="/assets/plugins/flot/jquery.flot.resize.js"></script>
     <script type="text/javascript">
         $(function () {
 
