--- a/Unituness/Views/Midia/Edit.cshtml
+++ b/Unituness/Views/Midia/Edit.cshtml
@@ -1,7 +1,4 @@
-﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-<h2>Edição de Midias</h2>
+﻿<h2>Edição de Midias</h2>
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
