--- a/Unituness/Views/Shared/_Layout.cshtml
+++ b/Unituness/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
         <!-- preloader -->
         <div class='preloader-wrapper'>
             <div class="preloader">
-                <img src="img/preloader.png" alt='loading image' />
+                <img src="/img/preloader.png" alt='loading image' />
             </div>
         </div><!-- / preloader -->
         <!-- Keep all page content within the page-content-wrapper -->
